kubernetes/planespotter-ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: planespotter-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: planespotter
spec:
  hosts:
  - "*"
  gateways:
  - planespotter-gateway
  http:
  - match:
    - uri:
        exact: /index.html
    - uri:
        exact: /registry.html
    - uri:
        exact: /details.html
    - uri:
        exact: /health.html
    - uri:
        exact: /contact.html
    - uri:
        exact: /static
   # - requests:
    #    headers: 
     #     regex: "/static/*/*"   
    - uri:
        prefix: /static
    route:
    - destination:
        host: planespotter-frontend
        port:
          number: 80
