kubernetes/planespotter-virtualservice-css.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: planespotter
spec:
  hosts:
  - "*"
  gateways:
  - planespotter-gateway
  http:
  - match:
    - uri:
        exact: /index.html
    - uri:
        exact: /registry.html
    - uri:
        exact: /details.html
    - uri:
        exact: /health.html
    - uri:
        exact: /contact.html
    - uri:
        prefix: /static
    route:   
    - destination:
        host: planespotter-frontend
        port:
          number: 80
